<resources>
    <string name="app_name">Messenger</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="button_name">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="back_to_register">Back to register page</string>
    <string name="select_photo_register">Select\nPhoto</string>
    <string name="signOut">SIGN OUT</string>
    <string name="newMessage">NEW MESSAGE</string>
    <string name="enter_message_prompt">Enter a message</string>
    <string name="send_prompt_dialogue">Send</string>
    <string name="user_profile_photo">User Profile Picture</string>
    <string name="place_for_user_message">Place For User Message</string>
</resources>