<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blueBell">

    <EditText
        android:id="@+id/username_edittext_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/white"
        app:layout_constraintLeft_toRightOf="parent"
        android:inputType="text"
        android:hint="@string/username"
        android:paddingLeft="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/password_edittext_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_login"
        app:layout_constraintLeft_toLeftOf="@id/username_edittext_login"
        app:layout_constraintRight_toRightOf="@id/username_edittext_login"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:paddingLeft="16dp"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/password_edittext_login"
        app:layout_constraintLeft_toLeftOf="@id/password_edittext_login"
        app:layout_constraintRight_toRightOf="@id/password_edittext_login"
        android:text="@string/login"
        />
    <TextView
        android:id="@+id/back_to_register_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintLeft_toLeftOf="@id/login_button"
        app:layout_constraintRight_toRightOf="@id/login_button"
        android:text="@string/back_to_register"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>