<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBell"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/username_edittext_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/white"
        android:layout_margin="32dp"
        android:paddingLeft="16dp"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/email_edittext_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/username_edittext_register"
        app:layout_constraintRight_toRightOf="@id/username_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_register"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:paddingLeft="16dp"
        android:inputType="textEmailAddress"
        android:background="@android:color/white"
        />

    <EditText
        android:id="@+id/password_edittext_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintLeft_toLeftOf="@id/email_edittext_register"
        app:layout_constraintRight_toRightOf="@id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@id/email_edittext_register"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:inputType="textPassword"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

